parser/som_parser.go
// Code generated from parser/Som.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // Som

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SomParser struct {
	*antlr.BaseParser
}

var SomParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func somParserInit() {
	staticData := &SomParserStaticData
	staticData.LiteralNames = []string{
		"", "", "", "'primitive'", "", "'='", "", "'('", "')'", "'|'", "','",
		"'-'", "'~'", "'&'", "'*'", "'/'", "'\\'", "'+'", "'>'", "'<'", "'@'",
		"'%'", "", "':'", "'['", "']'", "'#'", "'^'", "'.'", "':='",
	}
	staticData.SymbolicNames = []string{
		"", "Comment", "Whitespace", "Primitive", "Identifier", "Equal", "Separator",
		"NewTerm", "EndTerm", "Or", "Comma", "Minus", "Not", "And", "Star",
		"Div", "Mod", "Plus", "More", "Less", "At", "Per", "OperatorSequence",
		"Colon", "NewBlock", "EndBlock", "Pound", "Exit", "Period", "Assign",
		"Integer", "Double", "Keyword", "KeywordSequence", "STString",
	}
	staticData.RuleNames = []string{
		"classdef", "superclass", "instanceFields", "classFields", "classMethod",
		"method", "pattern", "unaryPattern", "binaryPattern", "keywordPattern",
		"methodBlock", "unarySelector", "binarySelector", "identifier", "keyword",
		"argument", "blockContents", "localDefs", "blockBody", "result", "expression",
		"assignation", "assignments", "assignment", "evaluation", "primary",
		"variable", "messages", "unaryMessage", "binaryMessage", "binaryOperand",
		"keywordMessage", "formula", "nestedTerm", "literal", "literalArray",
		"literalNumber", "literalDecimal", "negativeDecimal", "literalInteger",
		"literalDouble", "literalSymbol", "literalString", "selector", "keywordSelector",
		"string", "nestedBlock", "blockPattern", "blockArguments",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SomParserInit initializes any static state used to implement SomParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSomParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SomParserInit() {
	staticData := &SomParserStaticData
	staticData.once.Do(somParserInit)
}

// NewSomParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSomParser(input antlr.TokenStream) *SomParser {
	SomParserInit()
	this := new(SomParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SomParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Som.g4"

	return this
}

// SomParser tokens.
const (
	SomParserEOF              = antlr.TokenEOF
	SomParserComment          = 1
	SomParserWhitespace       = 2
	SomParserPrimitive        = 3
	SomParserIdentifier       = 4
	SomParserEqual            = 5
	SomParserSeparator        = 6
	SomParserNewTerm          = 7
	SomParserEndTerm          = 8
	SomParserOr               = 9
	SomParserComma            = 10
	SomParserMinus            = 11
	SomParserNot              = 12
	SomParserAnd              = 13
	SomParserStar             = 14
	SomParserDiv              = 15
	SomParserMod              = 16
	SomParserPlus             = 17
	SomParserMore             = 18
	SomParserLess             = 19
	SomParserAt               = 20
	SomParserPer              = 21
	SomParserOperatorSequence = 22
	SomParserColon            = 23
	SomParserNewBlock         = 24
	SomParserEndBlock         = 25
	SomParserPound            = 26
	SomParserExit             = 27
	SomParserPeriod           = 28
	SomParserAssign           = 29
	SomParserInteger          = 30
	SomParserDouble           = 31
	SomParserKeyword          = 32
	SomParserKeywordSequence  = 33
	SomParserSTString         = 34
)

// SomParser rules.
const (
	SomParserRULE_classdef        = 0
	SomParserRULE_superclass      = 1
	SomParserRULE_instanceFields  = 2
	SomParserRULE_classFields     = 3
	SomParserRULE_classMethod     = 4
	SomParserRULE_method          = 5
	SomParserRULE_pattern         = 6
	SomParserRULE_unaryPattern    = 7
	SomParserRULE_binaryPattern   = 8
	SomParserRULE_keywordPattern  = 9
	SomParserRULE_methodBlock     = 10
	SomParserRULE_unarySelector   = 11
	SomParserRULE_binarySelector  = 12
	SomParserRULE_identifier      = 13
	SomParserRULE_keyword         = 14
	SomParserRULE_argument        = 15
	SomParserRULE_blockContents   = 16
	SomParserRULE_localDefs       = 17
	SomParserRULE_blockBody       = 18
	SomParserRULE_result          = 19
	SomParserRULE_expression      = 20
	SomParserRULE_assignation     = 21
	SomParserRULE_assignments     = 22
	SomParserRULE_assignment      = 23
	SomParserRULE_evaluation      = 24
	SomParserRULE_primary         = 25
	SomParserRULE_variable        = 26
	SomParserRULE_messages        = 27
	SomParserRULE_unaryMessage    = 28
	SomParserRULE_binaryMessage   = 29
	SomParserRULE_binaryOperand   = 30
	SomParserRULE_keywordMessage  = 31
	SomParserRULE_formula         = 32
	SomParserRULE_nestedTerm      = 33
	SomParserRULE_literal         = 34
	SomParserRULE_literalArray    = 35
	SomParserRULE_literalNumber   = 36
	SomParserRULE_literalDecimal  = 37
	SomParserRULE_negativeDecimal = 38
	SomParserRULE_literalInteger  = 39
	SomParserRULE_literalDouble   = 40
	SomParserRULE_literalSymbol   = 41
	SomParserRULE_literalString   = 42
	SomParserRULE_selector        = 43
	SomParserRULE_keywordSelector = 44
	SomParserRULE_string          = 45
	SomParserRULE_nestedBlock     = 46
	SomParserRULE_blockPattern    = 47
	SomParserRULE_blockArguments  = 48
)

// IClassdefContext is an interface to support dynamic dispatch.
type IClassdefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() antlr.TerminalNode
	Equal() antlr.TerminalNode
	Superclass() ISuperclassContext
	InstanceFields() IInstanceFieldsContext
	EndTerm() antlr.TerminalNode
	AllMethod() []IMethodContext
	Method(i int) IMethodContext
	Separator() antlr.TerminalNode
	ClassFields() IClassFieldsContext
	AllClassMethod() []IClassMethodContext
	ClassMethod(i int) IClassMethodContext

	// IsClassdefContext differentiates from other interfaces.
	IsClassdefContext()
}

type ClassdefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassdefContext() *ClassdefContext {
	var p = new(ClassdefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_classdef
	return p
}

func InitEmptyClassdefContext(p *ClassdefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_classdef
}

func (*ClassdefContext) IsClassdefContext() {}

func NewClassdefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassdefContext {
	var p = new(ClassdefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SomParserRULE_classdef

	return p
}

func (s *ClassdefContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassdefContext) Identifier() antlr.TerminalNode {
	return s.GetToken(SomParserIdentifier, 0)
}

func (s *ClassdefContext) Equal() antlr.TerminalNode {
	return s.GetToken(SomParserEqual, 0)
}

func (s *ClassdefContext) Superclass() ISuperclassContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISuperclassContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISuperclassContext)
}

func (s *ClassdefContext) InstanceFields() IInstanceFieldsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstanceFieldsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstanceFieldsContext)
}

func (s *ClassdefContext) EndTerm() antlr.TerminalNode {
	return s.GetToken(SomParserEndTerm, 0)
}

func (s *ClassdefContext) AllMethod() []IMethodContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMethodContext); ok {
			len++
		}
	}

	tst := make([]IMethodContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMethodContext); ok {
			tst[i] = t.(IMethodContext)
			i++
		}
	}

	return tst
}

func (s *ClassdefContext) Method(i int) IMethodContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMethodContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMethodContext)
}

func (s *ClassdefContext) Separator() antlr.TerminalNode {
	return s.GetToken(SomParserSeparator, 0)
}

func (s *ClassdefContext) ClassFields() IClassFieldsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassFieldsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassFieldsContext)
}

func (s *ClassdefContext) AllClassMethod() []IClassMethodContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IClassMethodContext); ok {
			len++
		}
	}

	tst := make([]IClassMethodContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IClassMethodContext); ok {
			tst[i] = t.(IClassMethodContext)
			i++
		}
	}

	return tst
}

func (s *ClassdefContext) ClassMethod(i int) IClassMethodContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassMethodContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassMethodContext)
}

func (s *ClassdefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassdefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SomParser) Classdef() (localctx IClassdefContext) {
	localctx = NewClassdefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SomParserRULE_classdef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(98)
		p.Match(SomParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(99)
		p.Match(SomParserEqual)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(100)
		p.Superclass()
	}
	{
		p.SetState(101)
		p.InstanceFields()
	}
	p.SetState(105)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4303355448) != 0 {
		{
			p.SetState(102)
			p.Method()
		}

		p.SetState(107)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(116)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == SomParserSeparator {
		{
			p.SetState(108)
			p.Match(SomParserSeparator)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(109)
			p.ClassFields()
		}
		p.SetState(113)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&4303355448) != 0 {
			{
				p.SetState(110)
				p.ClassMethod()
			}

			p.SetState(115)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(118)
		p.Match(SomParserEndTerm)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISuperclassContext is an interface to support dynamic dispatch.
type ISuperclassContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NewTerm() antlr.TerminalNode
	Identifier() antlr.TerminalNode

	// IsSuperclassContext differentiates from other interfaces.
	IsSuperclassContext()
}

type SuperclassContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySuperclassContext() *SuperclassContext {
	var p = new(SuperclassContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_superclass
	return p
}

func InitEmptySuperclassContext(p *SuperclassContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_superclass
}

func (*SuperclassContext) IsSuperclassContext() {}

func NewSuperclassContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SuperclassContext {
	var p = new(SuperclassContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SomParserRULE_superclass

	return p
}

func (s *SuperclassContext) GetParser() antlr.Parser { return s.parser }

func (s *SuperclassContext) NewTerm() antlr.TerminalNode {
	return s.GetToken(SomParserNewTerm, 0)
}

func (s *SuperclassContext) Identifier() antlr.TerminalNode {
	return s.GetToken(SomParserIdentifier, 0)
}

func (s *SuperclassContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SuperclassContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SomParser) Superclass() (localctx ISuperclassContext) {
	localctx = NewSuperclassContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SomParserRULE_superclass)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(121)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == SomParserIdentifier {
		{
			p.SetState(120)
			p.Match(SomParserIdentifier)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	{
		p.SetState(123)
		p.Match(SomParserNewTerm)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInstanceFieldsContext is an interface to support dynamic dispatch.
type IInstanceFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOr() []antlr.TerminalNode
	Or(i int) antlr.TerminalNode
	AllVariable() []IVariableContext
	Variable(i int) IVariableContext

	// IsInstanceFieldsContext differentiates from other interfaces.
	IsInstanceFieldsContext()
}

type InstanceFieldsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstanceFieldsContext() *InstanceFieldsContext {
	var p = new(InstanceFieldsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_instanceFields
	return p
}

func InitEmptyInstanceFieldsContext(p *InstanceFieldsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_instanceFields
}

func (*InstanceFieldsContext) IsInstanceFieldsContext() {}

func NewInstanceFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstanceFieldsContext {
	var p = new(InstanceFieldsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SomParserRULE_instanceFields

	return p
}

func (s *InstanceFieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *InstanceFieldsContext) AllOr() []antlr.TerminalNode {
	return s.GetTokens(SomParserOr)
}

func (s *InstanceFieldsContext) Or(i int) antlr.TerminalNode {
	return s.GetToken(SomParserOr, i)
}

func (s *InstanceFieldsContext) AllVariable() []IVariableContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableContext); ok {
			len++
		}
	}

	tst := make([]IVariableContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableContext); ok {
			tst[i] = t.(IVariableContext)
			i++
		}
	}

	return tst
}

func (s *InstanceFieldsContext) Variable(i int) IVariableContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *InstanceFieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstanceFieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SomParser) InstanceFields() (localctx IInstanceFieldsContext) {
	localctx = NewInstanceFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SomParserRULE_instanceFields)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(133)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 5, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(125)
			p.Match(SomParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(129)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == SomParserPrimitive || _la == SomParserIdentifier {
			{
				p.SetState(126)
				p.Variable()
			}

			p.SetState(131)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(132)
			p.Match(SomParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClassFieldsContext is an interface to support dynamic dispatch.
type IClassFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllOr() []antlr.TerminalNode
	Or(i int) antlr.TerminalNode
	AllVariable() []IVariableContext
	Variable(i int) IVariableContext

	// IsClassFieldsContext differentiates from other interfaces.
	IsClassFieldsContext()
}

type ClassFieldsContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassFieldsContext() *ClassFieldsContext {
	var p = new(ClassFieldsContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_classFields
	return p
}

func InitEmptyClassFieldsContext(p *ClassFieldsContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_classFields
}

func (*ClassFieldsContext) IsClassFieldsContext() {}

func NewClassFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassFieldsContext {
	var p = new(ClassFieldsContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SomParserRULE_classFields

	return p
}

func (s *ClassFieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassFieldsContext) AllOr() []antlr.TerminalNode {
	return s.GetTokens(SomParserOr)
}

func (s *ClassFieldsContext) Or(i int) antlr.TerminalNode {
	return s.GetToken(SomParserOr, i)
}

func (s *ClassFieldsContext) AllVariable() []IVariableContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariableContext); ok {
			len++
		}
	}

	tst := make([]IVariableContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariableContext); ok {
			tst[i] = t.(IVariableContext)
			i++
		}
	}

	return tst
}

func (s *ClassFieldsContext) Variable(i int) IVariableContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariableContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariableContext)
}

func (s *ClassFieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassFieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SomParser) ClassFields() (localctx IClassFieldsContext) {
	localctx = NewClassFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SomParserRULE_classFields)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(143)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 7, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(135)
			p.Match(SomParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(139)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == SomParserPrimitive || _la == SomParserIdentifier {
			{
				p.SetState(136)
				p.Variable()
			}

			p.SetState(141)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(142)
			p.Match(SomParserOr)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClassMethodContext is an interface to support dynamic dispatch.
type IClassMethodContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Method() IMethodContext

	// IsClassMethodContext differentiates from other interfaces.
	IsClassMethodContext()
}

type ClassMethodContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClassMethodContext() *ClassMethodContext {
	var p = new(ClassMethodContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_classMethod
	return p
}

func InitEmptyClassMethodContext(p *ClassMethodContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SomParserRULE_classMethod
}

func (*ClassMethodContext) IsClassMethodContext() {}

func NewClassMethodContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClassMethodContext {
	var p = new(ClassMethodContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SomParserRULE_classMethod

	return p
}

func (s *ClassMethodContext) GetParser() antlr.Parser { return s.parser }

func (s *ClassMethodContext) Method() IMethodContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMethodContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMethodContext)
}

func (s *ClassMethodContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClassMethodContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *SomParser) ClassMethod() (localctx IClassMethodContext) {
	localctx = NewClassMethodContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SomParserRULE_classMethod)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(145)
		p.Method()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMethodContext is an interface to support dynamic dispatch.
type IMethodContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Pattern() IPatternContext
	Equal() antlr.TerminalNode
	Primitive() antlr.TerminalNode
	MethodBlock() IMethodBlockContext

	// IsMethodContext differentiates from other interfaces.
	IsMethodContext()
}

type MethodContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}
